feat: Fix favicon implementation and build configuration
- Updated HTML with proper favicon links and meta tags
- Fixed Vite config to copy favicon files to dist folder
- Added web manifest for PWA support
- Resolved favicon display issues in Google search results

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "format:sitemap": "prettier --write dist/sitemap.xml",
     "optimize:images": "tsx scripts/optimizeImages.ts",
-    "generate:pages": "tsx scripts/generatePages.ts"
+    "generate:pages": "tsx scripts/generatePages.ts",
+    "generate:favicons": "tsx scripts/generateFavicons.ts"
   },
   "dependencies": {
     "@sparticuz/chromium": "^123.0.0",
