--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,8 +14,8 @@
     "scripts/**/*",
     "src/seo/**/*.ts",
     "src/data/**/*.ts",
+    "src/utils/**/*.ts",
     "src/types.ts",
-    "src/utils/schemaGenerator.ts",
     "blog/**/*.ts",
     "postcss.config.js",
     "tailwind.config.js"
