--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "prebuild": "tsx scripts/preBuildErrorFixer.ts",
     "build": "npm run prebuild && npm run generate:blog && npm run optimize:images && vite build && npm run generate:sitemap && npm run format:sitemap",
+    "build:netlify": "tsx scripts/netlifyBuild.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest --run",
@@ -58,6 +59,7 @@
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "fast-check": "^4.4.0",
