🔧 Fix: Resolve remaining TypeScript errors after blog restructure
✅ Fixed Issues:
- Updated tsconfig.json to exclude blog_old_backup folder from compilation
- Fixed import paths in BlogPreview.tsx and BlogCard.tsx components
- Removed old blog/** pattern from TypeScript includes
- Cleaned up remaining .d.ts files causing compilation conflicts

🎯 Changes Made:
- tsconfig.json: Excluded blog_old_backup, removed blog/** includes
- src/components/BlogPreview.tsx: Fixed blog data import path
- src/components/BlogCard.tsx: Fixed OptimizedImage import path
- Removed conflicting .d.ts files throughout project

Status: All blog-related TypeScript errors resolved! ✅

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,10 +37,6 @@
     "src/**/*.tsx",
     "src/**/*.js",
     "src/**/*.jsx",
-    "blog/**/*.ts",
-    "blog/**/*.tsx",
-    "blog/**/*.js",
-    "blog/**/*.jsx",
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.spec.ts",
@@ -50,7 +46,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "blog_old_backup"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
