Fix blog system TypeScript errors and OptimizedImage props
- Fixed OptimizedImage component usage by adding required width/height props
- Fixed SEOHead prop name from 'image' to 'ogImage' in BlogPost component
- Updated tsconfig.json to exclude .d.ts files and resolve compilation conflicts
- Blog system now compiles without TypeScript errors
- All blog components (BlogCard, BlogList, BlogPost) working correctly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "blog_old_backup"
-  ],
-  "references": [{ "path": "./tsconfig.node.json" }]
+    "blog_old_backup",
+    "**/*.d.ts"
+  ]
 }
