Clean up remaining old blog references and fix import paths
- Fixed BlogPreview component import path from '../src/blog/data' to '../blog/data'
- Updated check-runtime-blog.js to use new blog structure path
- Cleaned up package.json scripts to remove old blog script references
- Cleared TypeScript cache to resolve language server issues
- All blog system components now have correct import paths

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "generate:seo-pages": "tsx scripts/generateSEOPages.ts",
     "generate:favicons": "tsx scripts/generateLuxeFavicons.ts",
     "generate:blog": "echo 'Blog content is now integrated in src/blog - no separate generation needed'",
-    "blog:new": "tsx blog/scripts/createBlogPost.ts",
-    "blog:validate": "tsx blog/scripts/validateBlogContent.ts",
+    "blog:check": "node check-runtime-blog.js",
     "fix": "tsx scripts/quickFix.ts",
     "fix:comprehensive": "tsx scripts/buildErrorHandler.ts",
     "fix:case": "tsx scripts/fixCaseSensitivity.ts",
