fix: Resolve Netlify deployment issues - TS6305 errors and build timeout
- Remove generated .d.ts files causing TS6305 errors
- Update .gitignore to prevent future .d.ts commits
- Optimize build script by removing image optimization from main build
- Add build:full script for local development with image optimization
- Update netlify.toml with build timeout configuration
- Improve tsconfig.json exclude patterns
- Streamline generate:blog script for faster builds

This should fix both TypeScript validation errors and build timeout issues on Netlify.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  # Increase build timeout to 30 minutes
+  BUILD_TIMEOUT = "1800"
 
 # Redirect rules for SPA routing
 [[redirects]]
