--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ dist/
 build/
 .vite/
 
+# TypeScript generated files
+**/*.d.ts
+!src/types/*.d.ts
+!@types/**/*.d.ts
+
 # Environment files
 .env
 .env.local
